css loader added, scrollbar fixed

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,3 +1,35 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     transition: 0.2s;
+}
+.loader {
+    /* color: #fff; */
+    font-family: Consolas, Menlo, Monaco, monospace;
+    font-weight: bold;
+    font-size: 20vh;
+    opacity: 0.8;
+}
+.loader span {
+    display: inline-block;
+    -webkit-animation: pulse 0.4s alternate infinite ease-in-out;
+    animation: pulse 0.4s alternate infinite ease-in-out;
+}
+.loader span:nth-child(odd) {
+    -webkit-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+}
+@-webkit-keyframes pulse {
+    to {
+        transform: scale(0.8);
+        opacity: 0.5;
+    }
+}
+@keyframes pulse {
+    to {
+        transform: scale(0.8);
+        opacity: 0.5;
+    }
 }
